eks-auto-mode/eks-cluster/k8s/ingressclass-auto.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb-auto
spec:
  controller: eks.amazonaws.com/alb
