eks-auto-mode/eks-cluster/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: nginx-demo

  ports:
    - port: 80
      targetPort: 80
